fix(navbar): align orga navbar height with tickets page by removing extra margin

--- a/app/eventyay/static/common/css/_navbar.css
+++ b/app/eventyay/static/common/css/_navbar.css
@@ -240,7 +240,6 @@ nav.navbar.navbar-inverse .navbar-brand:focus,
 
 .navbar-top-links.navbar-right {
   float: right !important;
-  margin: 7.5px 0;
 }
 
 .navbar-top-links.navbar-left {
